compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@pred_loop_empty.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"while true { }\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: PredicateLoop(
                                PredicateLoop {
                                    id: 0,
                                    condition: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:25:29,
                                        kind: Literal(
                                            Literal {
                                                id: 5871781006564002453,
                                                location: <internal>:25:29,
                                                kind: Boolean(
                                                    BooleanLiteral {
                                                        id: 5871781006564002453,
                                                        value: true,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    block: Block {
                                        statements: [],
                                        location: <internal>:30:33,
                                    },
                                    location: <internal>:19:33,
                                },
                            ),
                            location: <internal>:19:33,
                        },
                    ],
                    location: <internal>:17:35,
                },
                location: <internal>:0:35,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: PredicateLoop(
                PredicateLoop {
                    id: 0,
                    condition: Expression {
                        id: 5871781006564002453,
                        location: <internal>:25:29,
                        kind: Literal(
                            Literal {
                                id: 5871781006564002453,
                                location: <internal>:25:29,
                                kind: Boolean(
                                    BooleanLiteral {
                                        id: 5871781006564002453,
                                        value: true,
                                    },
                                ),
                            },
                        ),
                    },
                    block: Block {
                        statements: [],
                        location: <internal>:30:33,
                    },
                    location: <internal>:19:33,
                },
            ),
            location: <internal>:19:33,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:25:29,
            kind: Literal(
                Literal {
                    id: 5871781006564002453,
                    location: <internal>:25:29,
                    kind: Boolean(
                        BooleanLiteral {
                            id: 5871781006564002453,
                            value: true,
                        },
                    ),
                },
            ),
        },
    },
}
