compiler/lume_hir/src/snapshots/lume_hir__lower__tests__new_snapshots@array.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"let _ = new [A](0);\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 0,
                                    name: Identifier {
                                        name: "_",
                                        location: <internal>:23:24,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:27:36,
                                        kind: New(
                                            New {
                                                id: 5871781006564002453,
                                                name: Type {
                                                    name: 'std.Array',
                                                    type_params: [
                                                        Type {
                                                            name: 'A',
                                                            type_params: [],
                                                            location: <internal>:32:33,
                                                        },
                                                    ],
                                                    location: <internal>:0:0,
                                                },
                                                arguments: [
                                                    Expression {
                                                        id: 11743562013128004906,
                                                        location: <internal>:35:36,
                                                        kind: Literal(
                                                            Literal {
                                                                id: 11743562013128004906,
                                                                location: <internal>:35:36,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: 11743562013128004906,
                                                                        value: 0,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:19:38,
                        },
                    ],
                    location: <internal>:17:40,
                },
                location: <internal>:0:40,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Variable(
                VariableDeclaration {
                    id: 0,
                    name: Identifier {
                        name: "_",
                        location: <internal>:23:24,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 5871781006564002453,
                        location: <internal>:27:36,
                        kind: New(
                            New {
                                id: 5871781006564002453,
                                name: Type {
                                    name: 'std.Array',
                                    type_params: [
                                        Type {
                                            name: 'A',
                                            type_params: [],
                                            location: <internal>:32:33,
                                        },
                                    ],
                                    location: <internal>:0:0,
                                },
                                arguments: [
                                    Expression {
                                        id: 11743562013128004906,
                                        location: <internal>:35:36,
                                        kind: Literal(
                                            Literal {
                                                id: 11743562013128004906,
                                                location: <internal>:35:36,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 11743562013128004906,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                },
            ),
            location: <internal>:19:38,
        },
    },
    expressions: {
        11743562013128004906: Expression {
            id: 11743562013128004906,
            location: <internal>:35:36,
            kind: Literal(
                Literal {
                    id: 11743562013128004906,
                    location: <internal>:35:36,
                    kind: Int(
                        IntLiteral {
                            id: 11743562013128004906,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:27:36,
            kind: New(
                New {
                    id: 5871781006564002453,
                    name: Type {
                        name: 'std.Array',
                        type_params: [
                            Type {
                                name: 'A',
                                type_params: [],
                                location: <internal>:32:33,
                            },
                        ],
                        location: <internal>:0:0,
                    },
                    arguments: [
                        Expression {
                            id: 11743562013128004906,
                            location: <internal>:35:36,
                            kind: Literal(
                                Literal {
                                    id: 11743562013128004906,
                                    location: <internal>:35:36,
                                    kind: Int(
                                        IntLiteral {
                                            id: 11743562013128004906,
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    },
}
